Update documentation and issue tracker URLs in manifest

--- a/custom_components/aqara_bridge/manifest.json
+++ b/custom_components/aqara_bridge/manifest.json
@@ -3,11 +3,11 @@
     "name": "Aqara Bridge",
     "config_flow": true,
     "iot_class": "cloud_polling",
-    "documentation": "https://github.com/bernard3378/AqaraBridge",
-    "issue_tracker": "https://github.com/bernard3378/AqaraBridge/issues",
+    "documentation": "https://github.com/stepwp/AqaraBridge",
+    "issue_tracker": "https://github.com/stepwp/AqaraBridge/issues",
     "requirements": ["rocketmq"],
     "dependencies": [],
     "after_dependencies": ["homekit"],
-    "codeowners": ["@angeljanne","@meishild","@bernard3378"],
+    "codeowners": ["@angeljanne","@meishild","@bernard3378","@stepwp"],
     "version": "2.1.2"
   }
